Added Mouser-Event support to MyCanvas.java

--- a/mindmap2d/war/MindMap2D.html
+++ b/mindmap2d/war/MindMap2D.html
@@ -17,7 +17,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Mind Map 2D</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -45,8 +45,9 @@
       </div>
     </noscript>
 
-    <h1>Web Application Starter Project</h1>
+    <h1>Mind Map 2D</h1>
 
+	<!-- Leftover from example-project
     <table align="center">
       <tr>
         <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
@@ -59,5 +60,6 @@
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
     </table>
+	-->
   </body>
 </html>
