--- a/mindmap2d/war/MindMap2D.html
+++ b/mindmap2d/war/MindMap2D.html
@@ -1,10 +1,4 @@
-<!doctype html>
-<!-- The DOCTYPE declaration above will set the    -->
-<!-- browser's rendering engine into               -->
-<!-- "Standards Mode". Replacing this declaration  -->
-<!-- with a "Quirks Mode" doctype may lead to some -->
-<!-- differences in layout.                        -->
-
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -47,6 +41,7 @@
 
     <h1>Mind Map 2D</h1>
 
+	
 	<!-- Leftover from example-project
     <table align="center">
       <tr>
