--- a/mindmap2d/extension/documentation/example.xhtml
+++ b/mindmap2d/extension/documentation/example.xhtml
@@ -45,14 +45,15 @@
 	<head>
 		<title></title>
 	</head>
-	<body   style="padding: 0; margin: 0; border: 2px solid black;" 
+	<!-- <body   style="padding: 0; margin: 0; border: 2px solid black;" 
 			class="mouseEnable" 
 			onTouchDown="onTD" 
 			onTouchMove="onTM"
 			onTouchUp="onTU"
-	>
+	> -->
+	<body   style="padding: 0; margin: 0; border: 2px solid black;">
 	<script>	
-
+			
 			var pressedButton = false;
 			var target = null;
 			
@@ -76,7 +77,10 @@
 			}
 		
 			window.addEventListener("load", function (){
+				
 				target = document.getElementById("test");
+				/*target.onTouchDown = onTD;
+				addListener("onTouchDown", target);*/
 			}, false);
 		
 	</script>
@@ -84,6 +88,7 @@
 	<svg:svg version="1.1" baseProfile="full" width="1280px" height="1024px">
 		<svg:circle id="test" 
 					cx="150px" 
+					onTouchDown="onTD"
 					cy="100px" 
 					r="50px" 
 					fill="#ff0000" 
