--- a/mindmap2d/war/MindMap2D.html
+++ b/mindmap2d/war/MindMap2D.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="MindMap2D.css">
 
     <!-- Any title is fine                         -->
-    <title>Web Application Starter Project</title>
+    <title>Firemind</title>
     
     <script type="text/javascript" language="javascript" src="mindmap2d/mindmap2d.nocache.js"></script>
   </head>
