Diverses, zu lange her, primär merge

--- a/mindmap2d/extension/documentation/example.xhtml
+++ b/mindmap2d/extension/documentation/example.xhtml
@@ -118,14 +118,14 @@
 			
 				target.addEventListener("touchdown", onTD, false);
 				//target.addEventListener("touchmove", onTM, false);
-				target.addEventListener("touchup", onTU, false);
+				//target.addEventListener("touchup", onTU, false);
 				
-				target.addEventListener("tap", onTap, false);
-				target.addEventListener("doubletap", onDoubleTap, false);
+				//target.addEventListener("tap", onTap, false);
+				//target.addEventListener("doubletap", onDoubleTap, false);
 				target.addEventListener("move", onTM, false);
-				target.addEventListener("holdtap", onHoldTap, false);
-				target.addEventListener("pushin", onPushIn, false);
-				target.addEventListener("pullout", onPullOut, false);
+				//target.addEventListener("holdtap", onHoldTap, false);
+				//target.addEventListener("pushin", onPushIn, false);
+				//target.addEventListener("pullout", onPullOut, false);
 			}, false);
 		
 	</script>
